recommitting horizontal overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ body {
     position:relative;
     padding-bottom: 6rem;
     padding-top:6rem;
+    overflow-x: hidden;
 }
 
 .inline{
